--- a/DataTemplateAppSimple/App.xaml
+++ b/DataTemplateAppSimple/App.xaml
@@ -2,9 +2,10 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:DataTemplateAppSimple"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
         <Style TargetType="TextBlock">
+            <Setter Property="Margin" Value="5"/>
             <Setter Property="HorizontalAlignment" Value="Center"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
         </Style>
@@ -15,7 +16,7 @@
             <Setter Property="Background" Value="LightPink"/>
         </Style>
         <Style TargetType="TextBox">
-            <Setter Property="Margin" Value="5"/>
+            <Setter Property="Margin" Value="10"/>
             <Setter Property="Height" Value="70"/>
             <Setter Property="Background" Value="Azure"/>
             <Setter Property="FontFamily" Value="Arial"/>
