--- a/DataTemplateAppSimple/Views/MainWindow.xaml
+++ b/DataTemplateAppSimple/Views/MainWindow.xaml
@@ -1,28 +1,29 @@
-﻿<Window x:Class="DataTemplateAppSimple.MainWindow"
+﻿<Window x:Class="DataTemplateAppSimple.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DataTemplateAppSimple"
+        xmlns:local="clr-namespace:DataTemplateAppSimple.Models"
+        xmlns:conv="clr-namespace:DataTemplateAppSimple.Converters"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Window.Resources>
-        <local:BrandConverter x:Key="convert"/>
-        <local:ConveterImage x:Key="convert2"/>
-        <local:ConverterImageCPU x:Key="convCPU"/>
-        <local:ConverterImageGPU x:Key="convGPU"/>
-        <local:ConverterImageRAM x:Key="convRAM"/>
+        <conv:BrandConverter x:Key="convert"/>
+        <conv:ConveterImage x:Key="convert2"/>
+        <conv:ConverterImageCPU x:Key="convCPU"/>
+        <conv:ConverterImageGPU x:Key="convGPU"/>
+        <conv:ConverterImageRAM x:Key="convRAM"/>
         <DataTemplate DataType="{x:Type local:CPU}">
             <StackPanel Orientation="Horizontal" >
                 <TextBlock Text="{Binding Brand}"/>
                 <TextBlock Text="{Binding Clock_frequency}"/>
                 <TextBlock Text="{Binding Price}"/>
-                <Image Source="{Binding Price, Converter = {StaticResource convCPU}}" Width="50" Height="50"/>
+                <Image Margin="5" Source="{Binding Price, Converter = {StaticResource convCPU}}" Width="50" Height="50"/>
             </StackPanel>
         </DataTemplate>
         <DataTemplate DataType="{x:Type local:GPU}">
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="{Binding Title}"/>
+                <TextBlock Text="{Binding Title}" TextWrapping="Wrap" MaxWidth="200"/>
                 <TextBlock Text="{Binding Frequency}"/>
                 <TextBlock Text="{Binding Capacity}"/>
                 <TextBlock Text="{Binding Price}"/>
