--- a/DataTemplateAppSimple/Views/Editors/CPUAdd.xaml
+++ b/DataTemplateAppSimple/Views/Editors/CPUAdd.xaml
@@ -9,7 +9,13 @@
     <Window.Resources>
         <conv:BrandConverter x:Key="convert"/>
     </Window.Resources>
-    <Grid>
+    <Grid >
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="#FFED882F"/>
+                <GradientStop Color="#FF701717" Offset="1"/>
+            </LinearGradientBrush>
+        </Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
@@ -24,13 +30,11 @@
             <RadioButton Content="Intel" IsChecked="{Binding NewCPU.Brand, Converter={StaticResource convert}, ConverterParameter=0, Mode=OneWayToSource}"/>
             <RadioButton Content="AMD" IsChecked="{Binding NewCPU.Brand, Converter={StaticResource convert}, ConverterParameter=0, Mode=OneWayToSource}"/>
         </StackPanel>
-        <Label Content="Бренд" />
-        <Label Content="Тактовая частота" Grid.Row="1"/>
+        <Label Content="Brand" />
+        <Label Content="Сlock frequency" Grid.Row="1"/>
         <TextBox Text="{Binding NewCPU.Clock_frequency}" Grid.Row="1" Grid.Column="1"/>
 
-        <Label Content="Цена" Grid.Row="2"/>
+        <Label Content="Prise" Grid.Row="2"/>
         <TextBox Text="{Binding NewCPU.Price}" Grid.Row="2" Grid.Column="1"/>
-
-        <TextBlock Text="Закрой окно, чтобы добавить" Grid.Row="3" Grid.ColumnSpan="2"/>
     </Grid>
 </Window>
